ecmascript/parser/tests/test262-error-references/fail/4ee7b10cd97f554c.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/4ee7b10cd97f554c.js:1:3
  |
1 | [,
  |   ^

